# rust_bot

./: .gitignore  Cargo.toml  LICENSE  README.md  chat_export.json  flake.nix  run.sh  shell.nix  update.txt
rustbot_discord/: .env  Cargo.toml
rustbot_discord/src/: main.rs
rustbot_discord/src/commands/: ban.rs  c.rs  export_chat.rs  fix.rs  idk.rs  kick.rs  mod.rs  ping.rs  play.rs  poll.rs  react.rs  spamping.rs  status.rs  test.rs  update.rs  ustatus.rs
rustbot_web/: Cargo.toml
rustbot_web/src/: main.rs
rustbot_web/src/commands/: update.rs
rustbot_web/src/web/: mod.rs  page_handler.rs
rustbot_web/src/web/www/: aaa.config.js  package.json  tailwind.config.js
rustbot_web/src/web/www/static/: index.html  manageCommands.js  output.css  style.css
rustbot_web/src/web/www/static/fragments/: command.html
src/: main.rs
src/commands/: c.rs  coinflip.rs  echo.rs  mod.rs  pfp.rs  ping.rs  play.rs  poll.rs  react.rs  stats.rs  status.rs  test.rs  update.rs  uwu.rs
src/web/: get_commands.rs  mod.rs  post_handeler.rs  post_handler.rs  update_command.rs  web_main.rs
src/web/www/: index.html  tailwind.config.js
src/web/www/static/: index.html  javascript.js  manageCommands.js  output.css  style.css
temp/src/commands/: play.rs
temp/src/web/: page_handler.rs
