[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
plotters = "0.3.5"
reqwest = "0.11.22"
serenity = { version = "0.11.7", features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "http"
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
