[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
graplot = "0.1.22"
plotlib = "0.5.1"
plotters = "0.3.5"
rand = "0.8.5"
reqwest = "0.11.22"
serenity = { version = "0.11.7", features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "http"
] }
songbird = { version = "0.3.2", features = ["yt-dlp"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
