[package]
name = "rustbot_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
hyper = "1.0.1"
plotters = "0.3.5"
rand = "0.8.5"
regex = "1.10.2"
reqwest = "0.11.22"
serde = "1.0.192"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serenity = { version = "0.11.7", features = [
    "builder",
    "chrono",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "http"
] }
songbird = { version = "0.3.2", features = ["yt-dlp"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"



[profile.dev]
incremental = true
codegen-units = 16
